cmake_minimum_required(VERSION 3.2)
project(test_aes128_ecb CXX C)
set(C_STANDARD 18)
set(C_STANDARD_REQUIRED true)


# add_executable(test_aes128_ecb main.cpp aes.c cgms_crc.c codewars_lv5.c)
# add_executable(MultiplyingNumberAsStrings MultiplyingNumberAsStrings.cpp)
# add_executable(TheObservedPIN TheObservedPIN.cpp)
# add_executable(FindTheDivisors FindTheDivisors.cpp)
# add_executable(is_valid_ISBN_10 is_valid_ISBN_10.cpp)
# add_executable(scramble scramble.cpp)
# add_executable(human_readable_time human_readable_time.cpp)
# add_executable(mean_square_error mean_square_error.cpp)
# add_executable(uint32_to_ip uint32_to_ip.cpp)
# add_executable(hex_str_to_rgb hex_str_to_rgb.cpp)
# add_executable(chooseBestSum chooseBestSum.c)
# add_executable(args_LCM args_LCM.c)
# add_executable(GCD GCD.c) 
# add_executable(matrix_multiplication matrix_multiplication.c)
# add_executable(work_on_strings work_on_strings.c)
# add_executable(Buddy_Pairs Buddy_Pairs.c)
# add_executable(string_add string_add.c)

# add_executable(find_reverse_number find_reverse_number.c)
# add_executable(get_TCP_state get_TCP_state.c)
# add_executable(sum_intervals sum_intervals.c)
# add_executable(Split_Strings Split_Strings.cpp)
# add_executable(Bouncingball Bouncingball.cpp)
# add_executable(TwoToOne TwoToOne.cpp)
# add_executable(get_middle get_middle.cpp)
# add_executable(find_even_index find_even_index.cpp)


# add_executable(count count.cpp)
# add_executable(maxSequence maxSequence.cpp)
# add_executable(SumFct SumFct.cpp)
# add_executable(rot13 rot13.cpp)
# add_executable(move_zeroes move_zeroes.cpp)
# add_executable(highestScoringWord highestScoringWord.cpp)
# add_executable(properFractions properFractions.c)
# add_executable(is_merge is_merge.c)
# add_executable(test_negtive test_negtive.c)
# add_executable(beeramid beeramid.c)
# add_executable(search_substr search_substr.c)
# add_executable(score_hand score_hand.c)
# add_executable(power_sum_dig_term power_sum_dig_term.c)
# add_executable(closest closest.c)
# add_executable(base64_to_base10 base64_to_base10.c)

# add_executable(next_smaller_number next_smaller_number.c)
# add_executable(Greed_is_Good Greed_is_Good.c)
# add_executable(strsum strsum.c)
# add_executable(countones countones.c)
# add_executable(countones Find_the_missing_letter.cpp)
# add_executable(Product_of_consecutive_Fib_numbers Product_of_consecutive_Fib_numbers.c)
add_executable(Variable_Number_of_rguments_in_C Variable_Number_of_rguments_in_C.c)













